# coin-flip

./: Anchor.toml  README.md  package-lock.json  package.json
app/: coin_flip.json  package-lock.json  package.json
app/components/: Footer.tsx  Header.tsx  Play.tsx
app/hooks/: useProgram.ts
app/pages/: _app.tsx  index.tsx
app/pages/api/: setup.ts
programs/coin-flip/: Cargo.toml
programs/coin-flip/src/: lib.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000079.sst  000080.sst  000081.sst  000082.sst  000083.sst  000084.sst  000085.sst  IDENTITY  LOG  LOG.old.1647000229820317  MANIFEST-000086  OPTIONS-000119  OPTIONS-000121
tests/: coin-flip.ts
